[gd_scene load_steps=3 format=3 uid="uid://cd1bs5016f0ih"]

[ext_resource type="Script" path="res://game_over.gd" id="1_6j6t2"]
[ext_resource type="Texture2D" uid="uid://bv1x60tyegwh" path="res://Shinobi_dead.jpg" id="2_r110b"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_6j6t2")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1913.0
offset_bottom = 1073.0
texture = ExtResource("2_r110b")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 501.0
offset_top = 266.0
offset_right = 1348.0
offset_bottom = 479.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 156
text = "Game Over"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 58.0
offset_top = 646.0
offset_right = 526.0
offset_bottom = 832.0

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Try Again"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Return to menu"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
